# dnplayer

./: build-arm64.sh  build.gradle  build.sh
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/dongnao/dnplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DNFFmpeg.cpp  JavaCallHelper.cpp  JavaCallHelper.h  player_jni.cpp
app/src/main/cpp/include/libavutil/: common.h  ffversion.h
app/src/main/cpp/include/openssl/: configuration.h
app/src/main/cpp/librtmp/: Makefile
app/src/main/java/com/dongnao/dnplayer/: LiveAdapter.java  MainActivity.java  PlayActivity.java
app/src/main/java/com/dongnao/dnplayer/player/: DNPlayer.java
app/src/main/res/layout-land/: activity_play.xml
app/src/main/res/values/: strings.xml
app/src/test/: Android.xml
app/src/test/java/com/dongnao/dnplayer/: ExampleUnitTest.java
